--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="container">
                 <div class="header-in">
                     <div class="logo">
-                        <img src="./assets/images/logo-1.png" alt="">
+                        <img class="menu_logo" src="logo-CXYoyBfE.png" alt="">
                     </div>
                     <div id="menu">
                         <ul>
